// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package api;
option go_package = "examples/hello_world/api";

// The greeting service definition.
// New line
service Greeter {
  // Spawn
  rpc Spawn (HelloSpawnArg) returns (HelloData) {}
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloData {}
message HelloSpawnArg {}

message HelloTimer {
  string info = 1;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}


// 展示如何使用任务
service TaskBooth {
  rpc Spawn (TaskBoothSpawnArg) returns (TaskBoothData) {}
  // 开始演示各种任务的使用方式
  rpc StartTask (StartTaskReq) returns (StartTaskResp) {}
}
message TaskBoothSpawnArg {}
message TaskBoothData {}
// Start Task
message StartTaskReq {}
message StartTaskResp {}


// 展示如何使用远端
service RemoteBooth {
  rpc Spawn (RemoteBoothSpawnArg) returns (RemoteBoothData) {}
  rpc SayHello (RemoteSayHelloReq) returns (RemoteSayHelloResp) {}
  rpc Watch(RemoteWatchReq) returns (RemoteWatchResp) {}
  rpc Unwatch(RemoteUnwatchReq) returns (RemoteUnwatchResp) {}
}
message RemoteBoothSpawnArg {}
message RemoteBoothData {}
// Remote Send
message RemoteSayHelloReq {
  int32 id = 1;
  string message = 2;
}
message RemoteSayHelloResp {
  int32 id = 1;
}
// Remote Watch
message RemoteWatchReq {}
message RemoteWatchResp {}
// Remote Unwatch
message RemoteUnwatchReq {}
message RemoteUnwatchResp {}
// 远端的本地调用
service LocalBooth {
  rpc Spawn (LocalBoothSpawnArg) returns (LocalBoothSpawnData) {}
  rpc RemoteNotice (LocalRemoteNoticeReq) returns (LocalRemoteNoticeResp) {}
}
message LocalBoothSpawnArg {}
message LocalBoothSpawnData {}
// Local Remote Notice
message LocalRemoteNoticeReq {}
message LocalRemoteNoticeResp {}


// 虫洞
service WormholeBooth {
  rpc SpawnWormhole (WormholeBoothSpawnArg) returns (WormholeBoothData) {}
}
message WormholeBoothSpawnArg {}
message WormholeBoothData {}
